# usvg-remote-resolvers

./: .gitignore  Cargo.toml  LICENCE  README.md
src/: lib.rs  reqwest.rs  reqwest_blocking.rs  reqwest_http_cache.rs  s3.rs  utils.rs
src/reqwest_middleware/: http_cache.rs  mod.rs
