[package]
name = "usvg-remote-resolvers"
version = "0.1.2"
edition = "2021"
authors = ["aobatact"]
rust-version = "1.67.1"
description = "A library for resolving remote resources in SVG files for usvg."
repository = "https://github.com/aobatact/usvg-remote-resolvers"
license = "MIT"
keywords = ["svg"]

[dependencies]
reqwest = { version = "0.12.12", default-features = false, optional = true }
tokio = { version = "1.43.0", default-features = false, optional = true, features = ["rt", "rt-multi-thread"] }
usvg = "0.44.0"
reqwest-middleware = { version = "0.4.0", optional = true }
http-cache-reqwest = {version = "0.15.0", optional = true, default-features = false }

[dev-dependencies]
mockito = "1.6.1"
resvg = "0.44.0"
tokio = {version = "1.41.1", features = ["macros"] }

[features]
default = ["reqwest_blocking"]
reqwest = ["dep:reqwest", "dep:tokio"]
reqwest_blocking = ["dep:reqwest", "reqwest/blocking"]
reqwest_middleware = ["dep:reqwest-middleware"]
reqwest_moka_cache = ["reqwest_middleware", "http-cache-reqwest/manager-moka"]
reqwest_cacache = ["reqwest_middleware", "http-cache-reqwest/manager-cacache"]
