[package]
name = "usvg-remote-resolvers"
version = "0.2.0"
edition = "2021"
authors = ["aobatact"]
rust-version = "1.87"
description = "A library for resolving remote resources in SVG files for usvg."
repository = "https://github.com/aobatact/usvg-remote-resolvers"
license = "MIT"
keywords = ["svg"]

[dependencies]
aws-sdk-s3 = { version = "1", optional = true }
http-cache-reqwest = { version = "0.16.0", default-features = false, optional = true }
moka = { version = "0.12", default-features = false, features = ["sync"], optional = true }
reqwest = { version = "0.12.9", default-features = false, optional = true }
reqwest-middleware = { version = "0.4", optional = true }
tokio = { version = "1.43.1", default-features = false, optional = true, features = ["rt", "rt-multi-thread"] }
usvg = "0.47.0"

[dev-dependencies]
mockito = "1.6.1"
resvg = "0.47.0"
tokio = {version = "1.43.1", features = ["macros"] }

[features]
default = ["reqwest_blocking"]
reqwest = ["dep:reqwest", "dep:tokio"]
reqwest_blocking = ["dep:reqwest", "reqwest/blocking"]
reqwest_http_cache = ["dep:reqwest", "dep:tokio", "dep:reqwest-middleware", "dep:http-cache-reqwest"]
reqwest_http_cache_manager_cacache = ["reqwest_http_cache", "http-cache-reqwest/manager-cacache"]
reqwest_http_cache_manager_moka = ["reqwest_http_cache", "http-cache-reqwest/manager-moka"]
s3 = ["dep:aws-sdk-s3", "dep:tokio"]
s3_cache_moka = ["s3", "dep:moka"]
